--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "build": "umi build",
     "postinstall": "umi setup",
     "setup": "umi setup",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "prettier": "prettier --write src/**/*.{js,jsx,ts,tsx,css,less,scss,md,json}"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.18.0",
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.12.1",
     "antd-token-previewer": "^2.0.5",
-    "umi": "^4.0.89",
+    "prettier": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "umi": "^4.0.89"
   },
   "devDependencies": {
     "@types/react": "^17",
