--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "scripts": {
     "dev": "umi dev",
     "build": "umi build",
+    "deploy": "gh-pages -d dist",
     "postinstall": "umi setup",
     "setup": "umi setup",
     "start": "npm run dev",
-    "prettier": "prettier --write src/**/*.{js,jsx,ts,tsx,css,less,scss,md,json}"
+    "prettier": "prettier --write src/**/*.{js,jsx,ts,tsx,css,less,scss,md,json}",
+    "gh-pages": "npm run build && npm run deploy"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.18.0",
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.12.1",
     "antd-token-previewer": "^2.0.5",
+    "gh-pages": "^6.1.0",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
